# COJ

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/.sqlx/: query-1a6f5a045ea814d262600dc3a113f5031de9aa976355a578cd00081003d12b42.json  query-6d6da238c2366d0daae12470a44d571d94c6c4cdc769de198d48d7b020dc8a52.json  query-a80bb2ebd4211ef0847155fe6a61b26161ce6fcf16f1fb4398140e16b98127f1.json  query-cfb2664e1c61f3c3f80b17a594cb2a8b72d05a7457abfe35f1c63b71368dc274.json  query-e11173e12127aec23b7489e724b7f4460fa7363023b4ec3c530260764a44dad5.json
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/models/: mod.rs  problem.rs  submission.rs  verdict.rs
backend/src/routes/: submission.rs
